corpus/c/syntax/case-09/snapshots/gcc9_12/native_text_capture/render.default.txt
note: some compiler details were not fully structured; original diagnostics are preserved
error: syntax error
--> src/main.c:2:10
help: fix the first parser error at the user-owned location
why: src/main.c:2:10: error: expected ')' before '{' token
| src/main.c:2:10
|     if (1 {
|          ^
raw:
  src/main.c:2:10: error: expected ')' before '{' token
  src/main.c: In function 'main':
error: syntax error
--> src/main.c:5:1
help: fix the first parser error at the user-owned location
why: src/main.c:5:1: error: expected expression before '}' token
| src/main.c:5:1
| }
| ^
raw:
  src/main.c:5:1: error: expected expression before '}' token
      5 | }
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output